--- a/02/index.html
+++ b/02/index.html
@@ -5,128 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Basic HTML</title>
+    <title>Challenge #2</title>
   </head>
 
   <body>
-    <div class="container">
-      <div class="top"></div>
+    <article>
+      <div class="sale"><p class="pSale">sale</p></div>
+      <div class="title">
+        <p class="pTitle">Converse Chuck Taylor All Star Low Top</p>
+      </div>
 
-      <header class="header-1">
-        <h1>📘 The Code Magazine</h1>
-        <nav>
-          <a href="">Blog</a>
-          <a href="">Challenges</a>
-          <a href="">Flexbox</a>
-          <a href="">CSS Grid</a>
-        </nav>
-      </header>
+      <img src="images/challenges.jpg" alt="Van's shoes" class="shoesImage" />
+      <p class="price">$65.00</p>
+      <p class="shipping">Free shipping</p>
+      <p>
+        Ready to dress up or down, these classic canvas Chucks are and everyday
+        wardrobe staple.
+      </p>
+      <a class="more-info" href="https://vans.com.br/" target="_blank"
+        >More information &rarr;</a
+      >
 
-      <article>
-        <header class="header-2">
-          <h2>The Basic Language of the Web: HTML</h2>
-          <img src="images/laura-jones.jpg" alt="" class="girlIMG" />
-          <p>Posted by <strong>Laura Jones</strong> on Monday, June 21s 2022</p>
+      <div class="container">
+        <div class="square black"></div>
+        <div class="square blue"></div>
+        <div class="square red"></div>
+        <div class="square yellow"></div>
+        <div class="square green"></div>
+        <div class="square brown"></div>
+      </div>
 
-          <img src="images/post-img.jpg" alt="" class="postIMG" />
-          <button>❤ Like</button>
-        </header>
+      <h3 class="prodDetails">PRODUCT DETAILS</h3>
+      <ul class="product-list">
+        <li>Lightweight, durable, canvas sneaker</li>
+        <li>Lightly padded footbed for added comfort</li>
+        <li>Iconic Chuck Taylor ankle patch.</li>
+      </ul>
 
-        <p>
-          All modern websites and web applications are built using three
-          fundamental technologies: HTML, CSS and JavaScript. These are the
-          languages of the web.
-        </p>
-
-        <p>
-          In this post, let's focus on HTML. We will learn what HTML is all
-          about, and why you too should learn it.
-        </p>
-
-        <h3>What is HTML?</h3>
-        <p>
-          HTML stands for <strong>H</strong>yper<strong>T</strong>ext
-          <strong>M</strong>arkup <strong>L</strong>anguage. It's a markup
-          language that web developers use to structure and describe the content
-          of a webpage (not a programming language).
-        </p>
-
-        <p>
-          HTML consists of elements that describe different types of content:
-          paragraphs, links, headings, images, video, etc. Web browsers
-          understand HTML and render HTML code as websites.
-        </p>
-
-        <p>In HTML, each element is made up of 3 parts:</p>
-
-        <ol>
-          <li>The opening tag</li>
-          <li>The closing tag</li>
-          <li>The actual element</li>
-        </ol>
-
-        <p class="mdnWeb">
-          You can learn more at<a
-            href="https://developer.mozilla.org/en-US/docs/Web/HTML"
-            >MDN Web Docs.</a
-          >
-        </p>
-
-        <h3>Why should you learn HTML?</h3>
-
-        <p>
-          There are countless reasons for learning the fundamental language of
-          the web. Here are 5 of them:
-        </p>
-
-        <ul>
-          <li>To be able to use the fundamental web dev language.</li>
-          <li>
-            To hand-craft beautiful websites instead of relying on tools like
-            Worpress or Wix.
-          </li>
-          <li>To build web applications.</li>
-          <li>To impress friends.</li>
-          <li>To have fun 😃</li>
-        </ul>
-
-        <p>Hopefully you learned something new here. See you next time!</p>
-      </article>
-
-      <aside>
-        <h4>Related posts</h4>
-
-        <ul class="related">
-          <li>
-            <img
-              src="images/related-1.jpg"
-              alt=""
-              style="width: 75px; height: 75px"
-            /><a href="">How to Learn Web Development</a>
-          </li>
-          <p>By Andrade Pereira</p>
-
-          <li>
-            <img
-              src="images/related-2.jpg"
-              alt=""
-              style="width: 75px; height: 75px"
-            /><a href="">The Unknown Power of CSS</a>
-          </li>
-          <p>By Maria Madalena</p>
-
-          <li>
-            <img
-              src="images/related-3.jpg"
-              alt=""
-              style="width: 75px; height: 75px"
-            /><a href="">Why JavaScript is Awesome</a>
-          </li>
-          <p>By Jô Soares</p>
-        </ul>
-      </aside>
-
-      <footer>Copyright &#169; 2027 by The Code Magazine.</footer>
-    </div>
+      <button class="add-cart">add to cart</button>
+    </article>
   </body>
 </html>
