--- a/01/index.html
+++ b/01/index.html
@@ -10,6 +10,7 @@
 
   <body>
     <article>
+      <p class="sale">sale</p>
       <div class="title">
         <p class="pTitle">Converse Chuck Taylor All Star Low Top</p>
       </div>
@@ -25,8 +26,16 @@
         >More information &rarr;</a
       >
 
-      <h3 class="prodDetails">PRODUCT DETAILS</h3>
+      <div class="container">
+        <div class="square black"></div>
+        <div class="square blue"></div>
+        <div class="square red"></div>
+        <div class="square yellow"></div>
+        <div class="square green"></div>
+        <div class="square brown"></div>
+      </div>
 
+      <h3 class="prodDetails">PRODUCT DETAILS</h3>
       <ul class="product-list">
         <li>Lightweight, durable, canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
